web: fixed some overflow issues

--- a/www/tutorbot-app/src/components/activeTutorings/ActiveTutorings.module.css
+++ b/www/tutorbot-app/src/components/activeTutorings/ActiveTutorings.module.css
@@ -3,8 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 70%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
 }
 
 .myModal {
