--- a/www/tutorbot-app/src/components/tutorManagement/TutorManagement.module.css
+++ b/www/tutorbot-app/src/components/tutorManagement/TutorManagement.module.css
@@ -3,8 +3,7 @@
   max-width: 70%;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  flex-direction: column;
+  display: grid;
 }
 
 .newTutorForm {
